--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -15,4 +15,14 @@
     <li>Cheeses</li>
     <li>Egg</li>
 </ul>
+<h3>Steps</h3>
+<ol>
+    <li>Make the meat sauce.</li>
+    <li>Cook the noodles.</li>
+    <li>Make the ricotta mixture.</li>
+    <li>Layer the lasagna according to the recipe instructions.</li>
+    <li>Cover with foil and bake.</li>
+    <li>Cheeses</li>
+    <li>Let the lasagna rest before serving.</li>
+</ol>
 <a href="https://www.allrecipes.com/recipe/23600/worlds-best-lasagna/">World's Best Lasagna</a>
