linked new recipes on index page

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,7 +9,7 @@
 <ul>
     <li>Meat</li>
     <li>Onion and garlic</li>
-    <li>Sugar</li>
+    <li>Sugar</li>g
     <li>Spices and seasonings</li>
     <li>Lasagna noodles</li>
     <li>Cheeses</li>
